--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <p class="font-italic">
               <h5>WeightedWalking: Propeller-based On-leg Force Simulation of Walking in Fluid Materials in VR</h5>
               <p><em>Pingchuan Ke, <b>Shaoyu Cai</b>, Lantian Xu and Kening Zhu</em></p>
-              <p><em>In SIGGRAPH Asia 2021 Emerging Technologies, ACM New York, 2021.</em></p>
+              <p><em>In SIGGRAPH Asia 2021 Emerging Technologies, ACM New York, 2021. </em></p>
                [<a href="assets/img/sa21etech.pdf">Paper</a>]
                [<a href="https://shaoyuca.github.io/mypage/">Video</a>]
 	      </p>
@@ -187,7 +187,7 @@
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
-              <p><em>In IEEE Robotics and Automation Letters (RA-L) & IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021).</em></p>
+              <p><em>In IEEE Robotics and Automation Letters (RA-L) 2021 & IEEE/RSJ IROS 2021 (Acceptance Rate = 45%).</em></p>
                [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
 	      </p>
@@ -202,7 +202,7 @@
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network</h5>
-              <h5><b> Best Paper Audience Choice Award </b></h5>
+              <h5><b> Best Paper Audience Choice Award (Top 3) </b></h5>
               <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p>
               <p><em>In International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments (ICAT-EGVE 2020), pp. 11-15. The Eurographics Association, 2020.</em></p>
               [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
@@ -221,7 +221,7 @@
             <p class="font-italic">
               <h5>ThermAirGlove: A pneumatic glove for thermal perception and material identification in virtual reality</h5>
               <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Takuji Narumi, and Kening Zhu</em></p>
-              <p><em>In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), pp. 248-257.</em></p>
+              <p><em>In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), pp. 248-257. (Acceptance Rate = 21.4%)</em></p>
                [<a href="assets/img/thermairglove_paper.pdf">Paper</a>]
                [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
 	      </p>
@@ -236,7 +236,7 @@
             <p class="font-italic">
               <h5>Demonstration of thermairglove: A pneumatic glove for material perception in virtual reality through thermal and force feedback</h5>
               <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu</em></p>
-	            <p><em> In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
+	            <p><em> In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019. (Acceptance Rate = 20%) </em></p>
               [<a href="assets/img/thermairglove_etech.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
 	    </p>
