--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
-              <p><em>In IEEE Robotics and Automation Letters (RA-L) 2021 & IEEE/RSJ IROS 2021 (Acceptance Rate = 45%).</em></p>
+              <p><em>In IEEE Robotics and Automation Letters (RA-L), 6(4), 7525-7532, 2021. & IEEE/RSJ IROS 2021 (Acceptance Rate = 45%).</em></p>
                [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
 	      </p>
@@ -204,7 +204,7 @@
               <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network</h5>
               <h5><b> Best Paper Audience Choice Award (Top 3) </b></h5>
               <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p>
-              <p><em>In International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments (ICAT-EGVE 2020), pp. 11-15. The Eurographics Association, 2020.</em></p>
+              <p><em>In 2020 International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments (ICAT-EGVE 2020).</em></p>
               [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
               [<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
 	      </p>
@@ -251,7 +251,7 @@
             <p class="font-italic">
               <h5>A sense of ice and fire: Exploring thermal feedback with multiple thermoelectric-cooling elements on a smart ring</h5>
               <p><em>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris</em></p>
-	      <p><em>International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
+	      <p><em>International Journal of Human-Computer Studies 130 (2019): 234-247, 2019.</em></p>
               [<a href="assets/img/thermalring_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=j4l4NHX2QLM&t=1s">Video</a>]
 	      </p>
