--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
-              <p><em>In IEEE Robotics and Automation Letters (RA-L), 6(4), 7525-7532, 2021. & IEEE/RSJ IROS 2021 (Acceptance Rate = 45%).</em></p>
+              <p><em>In IEEE Robotics and Automation Letters (RA-L), 6(4), 7525-7532. & IROS 2021.</em></p>
                [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
 	      </p>
@@ -202,7 +202,7 @@
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network</h5>
-              <h5><b> Best Paper Audience Choice Award (Top 3) </b></h5>
+              <h5><b> Best Paper Audience Choice Award (Top-3) </b></h5>
               <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p>
               <p><em>In 2020 International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments (ICAT-EGVE 2020).</em></p>
               [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
