--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <p><em>Pingchuan Ke, <b>Shaoyu Cai</b>, Lantian Xu and Kening Zhu</em></p>
               <p><em>In SIGGRAPH Asia 2021 Emerging Technologies, ACM New York, 2021. </em></p>
                [<a href="assets/img/sa21etech.pdf">Paper</a>]
-               [<a href="https://shaoyuca.github.io/mypage/">Video</a>]
+               [<a href="https://dl.acm.org/doi/10.1145/3476122.3484842">Video</a>]
 	      </p>
           </div>
         </div>
