--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
-              <p><em>In IEEE Robotics and Automation Letters (RA-L), 6(4), 7525-7532. & IROS 2021.</em></p>
+              <p><em>In IEEE Robotics and Automation Letters (RA-L), 6(4), 7525-7532 and IROS 2021.</em></p>
                [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
 	      </p>
