--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p class="font-italic">
               <h5>GAN-based image-to-friction generation for tactile simulation of fabric material </h5>
               <p><em><b>Shaoyu Cai</b>, Lu Zhao, Yuki Ban, Takuji Narumi, Yue Liu and Kening Zhu</em></p>
-              <p><em>In Computers & Graphics 2021.</em></p>
+              <p><em>In Computers & Graphics, vol. 102, pp. 460-473, Feb. 2022.</em></p>
                [<a href="assets/img/cag.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/FrictGAN-Image-to-Friction-Generation">Code</a>]
 	      </p>
@@ -172,7 +172,7 @@
             <p class="font-italic">
               <h5>WeightedWalking: Propeller-based On-leg Force Simulation of Walking in Fluid Materials in VR</h5>
               <p><em>Pingchuan Ke, <b>Shaoyu Cai</b>, Lantian Xu and Kening Zhu</em></p>
-              <p><em>In SIGGRAPH Asia 2021 Emerging Technologies, ACM New York, 2021. </em></p>
+              <p><em>In SIGGRAPH Asia 2021 Emerging Technologies, ACM, New York, USA, Article 19, 1–2. 2021. </em></p>
                [<a href="assets/img/sa21etech.pdf">Paper</a>]
                [<a href="https://dl.acm.org/doi/10.1145/3476122.3484842">Video</a>]
 	      </p>
@@ -188,7 +188,7 @@
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
-              <p><em>In IEEE Robotics and Automation Letters (RA-L), 6(4), 7525-7532 and IROS 2021.</em></p>
+              <p><em>In IEEE Robotics and Automation Letters, vol. 6, no. 4, pp. 7525-7532, Oct. 2021 & IROS 2021.</em></p>
                [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
 	      </p>
@@ -252,7 +252,7 @@
             <p class="font-italic">
               <h5>A sense of ice and fire: Exploring thermal feedback with multiple thermoelectric-cooling elements on a smart ring</h5>
               <p><em>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris</em></p>
-	      <p><em>International Journal of Human-Computer Studies 130 (2019): 234-247, 2019.</em></p>
+	      <p><em>International Journal of Human-Computer Studies, vol. 130, pp. 234-247, Oct. 2019.</em></p>
               [<a href="assets/img/thermalring_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=j4l4NHX2QLM&t=1s">Video</a>]
 	      </p>
