--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <div class="row">
               	<div class="col-sm-10">
               <h4>PhD in Creative Media</h4> 
-              <h5>2019.9 - present</h5>
+              <h5>2019.09 - present</h5>
               <p><em>School of Creative Media, City University of Hong Kong, Hong Kong SAR, China</em></p>
               <p>Supervisor: <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a></p>
               <p>Reseach topics: Cross-modal learning, haptic rendering, multi-modal interface, virtual and augmentated reality </p>
@@ -332,7 +332,7 @@
               <div class="row">
                 <div class="col-sm-10">
               <h4>Bachelor of Engineering</h4>
-              <h5>2014.9 - 2018.6</h5>
+              <h5>2014.09 - 2018.06</h5>
               <p><em>College of Engineering and Technology, Huazhong Agricultural University, Wuhan, China</em></p>
               <p>Bachelor in Engineering</p>
             </div>
@@ -346,19 +346,29 @@
 
           <div class="col-lg-12">
             <h3 class="resume-title">Experience</h3>
+
             <div class="resume-item">
               <div class="row">
                 <div class="col-sm-10">
               <h4>Visiting researcher</h4>
-              <h5>2020.1 - 2020.3</h5>
+              <h5>2022.03 - 2022.07</h5>
+              <p><em>Wearable Systems Lab, Shanghai Jiaotong University, Shanghai, China </em></p>
+              <p>Supervisor: <a href="http://www.wearablesystems.org/">Prof. Peter Shull</a> </p>
+              
+            </div>
+          </div>
+				</div>
+
+
+            <div class="resume-item">
+              <div class="row">
+                <div class="col-sm-10">
+              <h4>Visiting researcher</h4>
+              <h5>2020.01 - 2020.03</h5>
               <p><em>Graduate of Information Science and Technology, The University of Tokyo, Tokyo, Japan </em></p>
               <p>Supervisors: <a href="http://www.cyber.t.u-tokyo.ac.jp/~narumi/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a></p>
               
             </div>
-            <!--<div class="col-sm-2">
-              <a href="https://www.u-tokyo.ac.jp/en/"><img src="assets/img/tk.jpg" width="180"></a>
-            </div>-->
-
           </div>
 				</div>
 
@@ -366,7 +376,7 @@
               <div class="row">
                 <div class="col-sm-10">
               <h4>Research assistant</h4>
-              <h5>2018.8 - 2019.8</h5>
+              <h5>2018.08 - 2019.08</h5>
               <p><em>School of Creative Media, City University of Hong Kong, Hong Kong SAR, China</em></p>
               <p>Supervisor: <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a></p>
             </div>
@@ -382,7 +392,7 @@
           <div class="row">
             <div class="col-sm-10">
           <h4>Exchanging undergraduate</h4>
-          <h5>2016.9 - 2017.2</h5>
+          <h5>2016.09 - 2017.02</h5>
           <p><em>Department of Electrical Engineering, National Taipei University, Taiwan, China</em></p>
           <p>Supervisor: <a href="https://hoomansamani.com/">Prof. Hooman Samani</a></p>
         </div>
