--- a/index.html
+++ b/index.html
@@ -146,8 +146,39 @@
         <div class="section-title">
           <h2>Publications</h2>
         </div>
-  
+
+        <!-- paper -->
         <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/propeller.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>PropelWalker: A Leg-basedWearable System with Propeller-based Force Feedback forWalking in Fluids in VR </h5>
+              <p><em>Pingchuan Ke, <b>Shaoyu Cai</b>, Haichen Gao and Kening Zhu</em></p>
+              <p><em>In 2022 IEEE Transactions on Visualization & Computer Graphics. </em></p>
+               [<a href="assets/img/PropelWalker_TVCG.pdf">Paper</a>]
+               [<a href="https://dl.acm.org/doi/10.1145/3476122.3484842">Video</a>]
+	      </p>
+          </div>
+        </div>  
+              
+        <!-- paper -->
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/transformer.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>Multi-modal Transformer-based Tactile Signal Generation for Haptic Texture Simulation of Materials in Virtual and Augmented Reality </h5>
+              <p><em><b>Shaoyu Cai</b> and Kening Zhu</em></p>
+              <p><em>In 2022 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct).</em></p>
+               [<a href="assets/img/ismar2022.pdf">Paper</a>]
+               <!-- [<a href="https://github.com/shaoyuca/FrictGAN-Image-to-Friction-Generation">Code</a>] -->
+	      </p>
+          </div>
+        </div>
+
         <!-- paper -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
