--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <p><em>Pingchuan Ke, <b>Shaoyu Cai</b>, Haichen Gao and Kening Zhu</em></p>
               <p><em>In 2022 IEEE Transactions on Visualization & Computer Graphics. </em></p>
                [<a href="assets/img/PropelWalker_TVCG.pdf">Paper</a>]
-               [<a href="https://dl.acm.org/doi/10.1145/3476122.3484842">Video</a>]
+               [<a href="https://www.youtube.com/watch?v=YOUX6EwBkNQ">Video</a>]
 	      </p>
           </div>
         </div>  
