--- a/weightedwalking.html
+++ b/weightedwalking.html
@@ -46,10 +46,10 @@
         <div class="row gy-4">
 
           <div class="col-md-6">
-            <iframe width=100% height="300px" src="https://www.youtube.com/embed/VgsmilcO1yU" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-                </div>
+            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/YOUX6EwBkNQ" .
+              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+              picture-in-picture" allowfullscreen></iframe>
+          </div>
             </div>
           </div>
   
