--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
               </style>
             <h3><p class="chinese">Shaoyu Cai 蔡紹禹</p></h3>
             <p style="text-align:justify" class="font-italic">
-              Shaoyu Cai is a Ph.D candidate under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a> from School of Creative Media, City University of Hong Kong. He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).
+              Shaoyu Cai is a Ph.D candidate under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a> from School of Creative Media, City University of Hong Kong. <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
               He was a visiting researcher at Graduate of Information Science and Technology, The University of Tokyo (2020) and working closely with <a href="https://www.cyber.t.u-tokyo.ac.jp/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a>. 
               <!--as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
-              His research interest lies in the field of Human-Computer Interaction (HCI), with emphasis on cross-modal generation (e.g., from vision to touch), data-driven texture modeling and rendering, 
-              and haptic interface for virtual and augmented reality (VR & AR).
+              His research objective is to explore how to build and develop “touchable” computer interfaces to interact physically with the real world and people. He strongly believes touch-based interaction can provide greater benefit and experience to users in their daily lives. 
+              His research interest lies in the field of Human-Computer Interaction (HCI), with emphasis on cross-modal generation (e.g., from vision to touch), data-driven texture modeling and rendering, and haptic interface for virtual and augmented reality (VR & AR). 
               
               <div class="email" class="font-italic">
                 <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
