--- a/index.html
+++ b/index.html
@@ -483,6 +483,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/glove.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ThermAirGlove</h4>
+                <p>IEEE VR 2020 & Siggraph Asia 2019</p>
+                <div class="portfolio-links">
+                  <a href="thermairglove.html" class="thermairglove" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/teaser.JPG" class="img-fluid" alt="">
@@ -509,18 +523,19 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/glove.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/ring.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ThermAirGlove</h4>
-                <p>IEEE VR 2020 & Siggraph Asia 2019</p>
+                <h4>Thermal Ring</h4>
+                <p>INT J of Human-Computer Studies 2019</p>
                 <div class="portfolio-links">
-                  <a href="thermairglove.html" class="thermairglove" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="thermalring.html" class="thermalring" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -530,19 +545,6 @@
                 <p>IEEE TVCG 2022 & SIGGRAPH ASIA 2021</p>
                 <div class="portfolio-links">
                   <a href="weightedwalking.html" class="WeightedWalking" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/ring.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Thermal Ring</h4>
-                <p>INT J of Human-Computer Studies 2019</p>
-                <div class="portfolio-links">
-                  <a href="thermalring.html" class="thermalring" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -561,7 +563,6 @@
             </div>
           </div>
 
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-app portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/haptwist.jpg" class="img-fluid" alt="">
@@ -574,6 +575,22 @@
               </div>
             </div>
           </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/ismarposter.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Multi-modal Tramsformer</h4>
+                <p>ISMAR 2022</p>
+                <div class="portfolio-links">
+                  <a href="multimodal.html" class="multimodal" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
           
 
