--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
               <p>
                 [<a href="assets/img/Academic_CV_Shaoyu_Cai.pdf">CV</a>] [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
-                [<a href="https://dblp.org/pid/246/5542.html">dblp</a>][<a href="www.linkedin.com/in/shaoyu-cai-63a96523a">Linkedin</a>]
+                [<a href="https://dblp.org/pid/246/5542.html">dblp</a>][<a href="https://www.linkedin.com/in/shaoyu-cai-63a96523a">Linkedin</a>]
               </p>
               
           </div>
