--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </style>
             <h3><p class="chinese">Shaoyu Cai 蔡紹禹</p></h3>
             <p style="text-align:justify" class="font-italic">
-              Shaoyu Cai is a Ph.D candidate under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a> from School of Creative Media, City University of Hong Kong. <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
+              Shaoyu Cai received his Ph.D. degree under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
               He was a visiting researcher at Graduate of Information Science and Technology, The University of Tokyo (2020) and working closely with <a href="https://www.cyber.t.u-tokyo.ac.jp/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a>. 
               <!--as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
               His research objective is to explore how to develop “touchable” computer interfaces to enable people to have physical interaction in the virtual world. 
@@ -128,7 +128,9 @@
             
             
             <div class="resume-item">
-              <p>[2023.03] I am currently looking for some postdoc/factuly positions <br>
+              <p>
+              [2023.07] I pass my PhD denfense, thank my supervisor and thesis committee members!!! <br>
+              [2023.03] I am currently looking for some postdoc/factuly positions <br>
               [2022.10] I received multiple honors from CCVR 2022! <br>
               [2022.10] I attended ISMAR2022 in Singapore!<br>
               [2022.09] <em>PropelWalker</em> was accepted by TVCG!<br>
