--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                 <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
               </div>
               <p>
-                [<a href="assets/img/Academic_CV_Shaoyu_Cai.pdf">CV</a>] [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
+                <!--[<a href="assets/img/Academic_CV_Shaoyu_Cai.pdf">CV</a>] -->
+                [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
                 [<a href="https://dblp.org/pid/246/5542.html">dblp</a>][<a href="https://www.linkedin.com/in/shaoyu-cai-63a96523a">Linkedin</a>]
               </p>
               
@@ -129,6 +130,8 @@
             
             <div class="resume-item">
               <p>
+              [2023.10] I am currently looking for Postdoc researchers to join my new group NUS Immersive Reality Lab. More details can be found <a href="https://mp.weixin.qq.com/s/iMtPzkqPNMBPAq8MzagYfQ">here</a>. <br>
+              [2023.09] I will join College of Design and Engineering, National University of Singapore as a Lecturer! <br>
               [2023.07] I pass my PhD denfense, thank my supervisor and thesis committee members!!! <br>
               [2023.03] I am currently looking for some postdoc/factuly positions <br>
               [2022.10] I received multiple honors from CCVR 2022! <br>
