--- a/index.html
+++ b/index.html
@@ -133,11 +133,9 @@
               [2023.10] I am currently looking for Postdoc researchers to join my new group NUS Immersive Reality Lab. More details can be found <a href="https://mp.weixin.qq.com/s/iMtPzkqPNMBPAq8MzagYfQ">here</a>. <br>
               [2023.09] I will join College of Design and Engineering, National University of Singapore as a Lecturer! <br>
               [2023.07] I pass my PhD denfense, thank my supervisor and thesis committee members!!! <br>
-              [2023.03] I am currently looking for some postdoc/factuly positions <br>
               [2022.10] I received multiple honors from CCVR 2022! <br>
               [2022.10] I attended ISMAR2022 in Singapore!<br>
-              [2022.09] <em>PropelWalker</em> was accepted by TVCG!<br>
-              [2022.08] One poster paper was accepted in ISMAR 2022!<br>
+
               <!--<p>[2020.10] FrictGAN was accepted by ICAT-EGVE 2020.</p>-->
               <p class="font-italic"><a href="#more">More...</a></p>
             </div>
@@ -155,6 +153,21 @@
         <div class="section-title">
           <h2>Publications</h2>
         </div>
+
+        <!-- paper -->
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/size.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>Perceptual Thresholds of Visual Size Discrimination in Augmented and Virtual Reality </h5>
+              <p><em>Liwen Wang, <b>Shaoyu Cai</b> and Christian Sandor</em></p>
+              <p><em>In Computers & Graphics, vol. 117, pp. 105-113, Dec. 2023. </em></p>
+               [<a href="assets/img/size-cag.pdf">Paper</a>]
+	      </p>
+          </div>
+        </div> 
 
         <!-- paper -->
         <div class="row">
@@ -606,7 +619,10 @@
         </div>
         <!--<div class="col-lg-2 col-md-3 pt-lg-4" data-aos="fade-left">-->
         <div class="col-lg-2 col-md-3 pt-lg-4"></div>
-          <p class="font-italic">[2022.03] I started a visiting study in Wearable Systems Lab at Shanghai Jiaotong University!<br>
+          <p class="font-italic">
+          [2022.09] <em>PropelWalker</em> was accepted by TVCG!<br>
+          [2022.08] One poster paper was accepted in ISMAR 2022!<br>
+          [2022.03] I started a visiting study in Wearable Systems Lab at Shanghai Jiaotong University!<br>
           [2021.09] The invited submission of FrictGAN was accepted by Computers & Graphics!<br>
           [2021.09] <em>WeightedWalking</em> was accepted by ACM SIGGRAPH Asia Emerging Technologies!<br>
           [2021.07] One paper was accepted by IEEE Robotics and Automation Letters with IROS 2021!<br>
