--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
               </style>
             <h3><p class="chinese">Shaoyu Cai 蔡紹禹</p></h3>
             <p style="text-align:justify" class="font-italic">
-              Shaoyu Cai received his Ph.D. degree under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
-              He was a visiting researcher at Graduate of Information Science and Technology, The University of Tokyo (2020) and working closely with <a href="https://www.cyber.t.u-tokyo.ac.jp/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a>. 
-              <!--as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
+              Dr. Shaoyu Cai is currently an educator-track lecturer at the Engineering Design and Innovation Centre, College of Design and Engineering, National University of Singapore (NUS). He received his Ph.D. degree <!--under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a>--> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
+              <!--He was a visiting researcher at the University of Tokyo (2020) and Shanghai Jiao Tong University (2022). and working closely with <a href="https://www.cyber.t.u-tokyo.ac.jp/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a>. 
+              as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
               His research objective is to explore how to develop “touchable” computer interfaces to enable people to have physical interaction in the virtual world. 
               He strongly believes haptic interaction can provide greater benefit and experience to users in extended reality (XR) environments, including virtual and augmented reality (VR & AR). 
-              His research interest lies in the field of Human-Computer Interaction (HCI), with emphasis on cross-modal generation (e.g., from vision to touch), data-driven texture modeling and rendering, and haptic interface for VR and AR. 
+              His research interest mainly focuses on Human-Computer Interaction, particularly in the areas of Multimodal and Embodied Interaction, Extended Reality (including VR, AR and MR), Wearables, and Haptic Interfaces. 
               
               <div class="email" class="font-italic">
                 <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
@@ -165,6 +165,20 @@
               <p><em>Liwen Wang, <b>Shaoyu Cai</b> and Christian Sandor</em></p>
               <p><em>In Computers & Graphics, vol. 117, pp. 105-113, Dec. 2023. </em></p>
                [<a href="assets/img/size-cag.pdf">Paper</a>]
+	      </p>
+          </div>
+        </div> 
+        <!-- paper -->
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/ismar23.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>Comparing Perceptual Thresholds of Size Perception under Different Distances in Augmented Reality </h5>
+              <p><em>Liwen Wang and <b>Shaoyu Cai</b></em></p>
+              <p><em>In 2023 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct).</em></p>
+               [<a href="assets/img/Comparing_Perceptual.pdf">Paper</a>]
 	      </p>
           </div>
         </div> 
