--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
               </style>
             <h3><p class="chinese">Shaoyu Cai 蔡紹禹</p></h3>
             <p style="text-align:justify" class="font-italic">
-              Dr. Shaoyu Cai is currently an educator-track lecturer at the Engineering Design and Innovation Centre, College of Design and Engineering, National University of Singapore (NUS). He received his Ph.D. degree <!--under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a>--> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
+              Dr. Shaoyu Cai is currently an educator-track lecturer at the Engineering Design and Innovation Centre (EDIC), College of Design and Engineering, National University of Singapore (NUS). He received his Ph.D. degree <!--under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a>--> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
               <!--He was a visiting researcher at the University of Tokyo (2020) and Shanghai Jiao Tong University (2022). and working closely with <a href="https://www.cyber.t.u-tokyo.ac.jp/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a>. 
               as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
               His research objective is to explore how to develop “touchable” computer interfaces to enable people to have physical interaction in the virtual world. 
               He strongly believes haptic interaction can provide greater benefit and experience to users in extended reality (XR) environments, including virtual and augmented reality (VR & AR). 
-              His research interest mainly focuses on Human-Computer Interaction, particularly in the areas of Multimodal and Embodied Interaction, Extended Reality (including VR, AR and MR), Wearables, and Haptic Interfaces. 
+              His research interest mainly focuses on Human-Computer Interaction, particularly in the areas of Multimodal and Embodied Interaction, Extended Reality, Wearables, and Haptic Interfaces. 
               
               <div class="email" class="font-italic">
                 <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
