--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@
         <!-- paper -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/electronics.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>A skin-integrated multimodal haptic interface for immersive tactile feedback</h5>
+              <p><em>Ya Huang, Jingkun Zhou, Pingchuan Ke, Xu Guo, Chun Ki Yiu, Kuanming Yao, <b>Shaoyu Cai</b>, Dengfeng Li,..., Xinge Yu</em></p>
+              <p><em>Nature Electronics 6, 1020–1031 (2023). </em></p>
+               [<a href="assets/img/ne2023.pdf">Paper</a>] 
+               [<a href="https://www.youtube.com/watch?v=3byUf94J1QM">Video</a>]
+	      </p>
+          </div>
+        </div> 
+ 
+        <!-- paper -->
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/size.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
