--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </style>
             <h3><p class="chinese">Shaoyu Cai 蔡紹禹</p></h3>
             <p style="text-align:justify" class="font-italic">
-              Dr. Shaoyu Cai is currently an educator-track lecturer at the Engineering Design and Innovation Centre (EDIC), College of Design and Engineering, National University of Singapore (NUS). He received his Ph.D. degree <!--under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a>--> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
+              Dr. Shaoyu Cai is currently an educator-track lecturer at the <a href="https://cde.nus.edu.sg/edic/">Engineering Design and Innovation Centre (EDIC)</a>, College of Design and Engineering, National University of Singapore (NUS). He received his Ph.D. degree <!--under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a>--> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
               <!--He was a visiting researcher at the University of Tokyo (2020) and Shanghai Jiao Tong University (2022). and working closely with <a href="https://www.cyber.t.u-tokyo.ac.jp/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a>. 
               as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
               His research objective is to explore how to develop “touchable” computer interfaces to enable people to have physical interaction in the virtual world. 
@@ -102,10 +102,10 @@
               His research interest mainly focuses on Human-Computer Interaction, particularly in the areas of Multimodal and Embodied Interaction, Extended Reality, Wearables, and Haptic Interfaces. 
               
               <div class="email" class="font-italic">
-                <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
+                <p><b>Contact Me:</b> <em>shaoyucai [AT] nus [DOT] edu [DOT] sg</em></p> 
               </div>
               <p>
-                <!--[<a href="assets/img/Academic_CV_Shaoyu_Cai.pdf">CV</a>] -->
+                [<a href="https://cde.nus.edu.sg/edic/staff/cai-shaoyu/">NUS Profile</a>]
                 [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
                 [<a href="https://dblp.org/pid/246/5542.html">dblp</a>][<a href="https://www.linkedin.com/in/shaoyu-cai-63a96523a">Linkedin</a>]
               </p>
