--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             
             <div class="resume-item">
               <p>
-              [2023.10] I am currently looking for Postdoc researchers to join my new group NUS Immersive Reality Lab. More details can be found <a href="https://mp.weixin.qq.com/s/iMtPzkqPNMBPAq8MzagYfQ">here</a>. <br>
-              [2023.09] I will join College of Design and Engineering, National University of Singapore as a Lecturer! <br>
+              [2024.04] ViboPneumo was accepted by IEEE TVCG! <br>
+              [2023.12] I started a new position at College of Design and Engineering, National University of Singapore as a Lecturer! <br>
               [2023.07] I pass my PhD denfense, thank my supervisor and thesis committee members!!! <br>
               [2022.10] I received multiple honors from CCVR 2022! <br>
               [2022.10] I attended ISMAR2022 in Singapore!<br>
@@ -153,6 +153,21 @@
         <div class="section-title">
           <h2>Publications</h2>
         </div>
+        <!-- paper -->
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/vibopneumo.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5></h5>ViboPneumo: A Vibratory-Pneumatic Finger-Worn Haptic Device for Altering Perceived Texture Roughness in Mixed Reality</h5>
+              <p><em><b>Shaoyu Cai</b>, Zhenlin Chen, Haichen Gao, Ya Huang, Qi Zhang, Xinge Yu, and Kening Zhu</em></p>
+              <p><em>In 2024 IEEE Transactions on Visualization & Computer Graphics. </em></p>
+               [<a href="assets/img/vibo_paper.pdf">Paper</a>] 
+               [<a href="https://youtu.be/6g25o7i7kSM">Video</a>]
+	      </p>
+          </div>
+        </div> 
 
         <!-- paper -->
         <div class="row">
